[project]
name = "private-repo-hunter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ghapi>=1.0.13",
    "pandas>=3.0.2",
    "progress>=1.6.1",
    "pydantic>=2.13.3",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
]
